force-app/main/default/objects/Opportunity/fields/Monthly_Fees_new2__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Fees_new2__c</fullName>
    <label>Monthly Fees</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>