force-app/main/default/objects/Opportunity/fields/Monthly_Fees_new__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Fees_new__c</fullName>
    <formula>Est_Total_Monthly_Fees__c /  No_of_Pymts__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Fees OLD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>