force-app/main/default/objects/Opportunity/fields/Monthly_Payments__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Payments__c</fullName>
    <formula>(Price_with_Est_Monthly_Fees__c - 199 )/ No_of_Pymts__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Monthly Payments AFTER $199 deposit</inlineHelpText>
    <label>Monthly Payments old</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>