force-app/main/default/objects/Opportunity/fields/Monthly_Payments_new__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Payments_new__c</fullName>
    <description>Created with Trigger</description>
    <label>Monthly Payments</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>