force-app/main/default/objects/Opportunity/fields/My_Genome_Premium__c.field-meta.xml
<CustomField>
    <fullName>My_Genome_Premium__c</fullName>
    <defaultValue>0</defaultValue>
    <label>ZDeprecate My Genome Premium</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>