force-app/main/default/objects/Opportunity/fields/n2de__Is_trigger_enabled__c.field-meta.xml
<CustomField>
    <fullName>n2de__Is_trigger_enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trigger enabled</label>
    <type>Checkbox</type>
</CustomField>