force-app/main/default/objects/Opportunity/fields/Need_what_is_clients_level_of_need__c.field-meta.xml
<CustomField>
    <fullName>Need_what_is_clients_level_of_need__c</fullName>
    <inlineHelpText>1 is low need, 5 is high need, or enter a value in between.</inlineHelpText>
    <label>NEED: What is client&apos;s level of need?</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>