force-app/main/default/objects/Opportunity/fields/New_Price_with_10_Discount__c.field-meta.xml
<CustomField>
    <fullName>New_Price_with_10_Discount__c</fullName>
    <formula>if ( 
AND (  Price_with_Sales_Discount__c &gt; 0,
IsClosed = false, 
Coupon_Code__c &lt;&gt; &quot;Ten off&quot;,
 Sales_Discount__c &gt; 0,
 Text(Storage_Plan__c) &lt;&gt; &quot;Annual Storage&quot;, 
NOT(ISBLANK(Text(Storage_Plan__c)))),  
Price_with_Sales_Discount__c  -  X10_Off__c, Null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Price with 10% Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>