force-app/main/default/objects/Opportunity/fields/Newborn_Genome__c.field-meta.xml
<CustomField>
    <fullName>Newborn_Genome__c</fullName>
    <defaultValue>0</defaultValue>
    <label>ZDeprecate Newborn Genome</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>