force-app/main/default/objects/Opportunity/fields/Newborn_Panel__c.field-meta.xml
<CustomField>
    <fullName>Newborn_Panel__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Newborn Panel</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>