force-app/main/default/objects/Opportunity/fields/No_of_Pymts__c.field-meta.xml
<CustomField>
    <fullName>No_of_Pymts__c</fullName>
    <formula>CASE(TEXT( Payment_Plans__c ), 
&quot;12M&quot;, 12, 
&quot;24M&quot;, 24, 
&quot;36M&quot;, 36, 
&quot;48M&quot;, 48, 
&quot;HY12&quot;, 11,
&quot;HY18&quot;, 17,
null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No of Pymts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>