force-app/main/default/objects/Opportunity/fields/Number_of_Births__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Births__c</fullName>
    <label>Number of Births</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
                <default>true</default>
                <label>Single</label>
            </value>
            <value>
                <fullName>Twins</fullName>
            </value>
            <value>
                <fullName>Triplets</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>