force-app/main/default/objects/Opportunity/fields/Number_of_Fees__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Fees__c</fullName>
    <description>Populated by Order Calculator and mapped to Order page upon enrollment.</description>
    <label>Number of Fees</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>