force-app/main/default/objects/Opportunity/fields/Number_of_Payments__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Payments__c</fullName>
    <formula>fw2__Payment_Plan__r.Number_of_Payments__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Payments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>