force-app/main/default/objects/Opportunity/fields/Number_of_Previous_Orders__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Previous_Orders__c</fullName>
    <formula>Account.Number_of_Orders__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Previous Orders</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>