force-app/main/default/objects/Opportunity/fields/Number_of_Products__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Products__c</fullName>
    <label>Number of Products</label>
    <summarizedField>OpportunityLineItem.Quantity</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Category__c</field>
        <operation>equals</operation>
        <value>Product</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OpportunityLineItem.Product_Code__c</field>
        <operation>notEqual</operation>
        <value>CollKit</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>