force-app/main/default/objects/Opportunity/fields/Number_of_SMS_Messages__c.field-meta.xml
<CustomField>
    <fullName>Number_of_SMS_Messages__c</fullName>
    <description>Rollup using DLRS - Opportunity_Outbound_Messages</description>
    <label>Number of SMS Messages</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>