force-app/main/default/objects/Opportunity/fields/Numeric_Births__c.field-meta.xml
<CustomField>
    <fullName>Numeric_Births__c</fullName>
    <formula>if (ISPICKVAL(Number_of_Births__c, &quot;Single&quot;), 1,
if (ISPICKVAL(Number_of_Births__c, &quot;Twins&quot;), 2, 
if (ISPICKVAL(Number_of_Births__c, &quot;Triplets&quot;), 3,
0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used to create numeric value for number of births, used in Flow/Process Builder.</inlineHelpText>
    <label>Numeric Births</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>