force-app/main/default/objects/Opportunity/fields/OBGYN__c.field-meta.xml
<CustomField>
    <fullName>OBGYN__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Creates relationship between Opportunity and OBGYN, mapped to CBO during enrollment.</description>
    <label>OBGYN</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You are trying to link to a record that is not an OBGYN.</errorMessage>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Medical Professional</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (OBGYN)</relationshipLabel>
    <relationshipName>Client_Opportunity_Stage</relationshipName>
    <type>Lookup</type>
</CustomField>