force-app/main/default/objects/Opportunity/fields/One_Minute_Delay_Ecomm_Storage_Change__c.field-meta.xml
<CustomField>
    <fullName>One_Minute_Delay_Ecomm_Storage_Change__c</fullName>
    <description>When Ecomm Storage is changed, this stored the Now () date and time minus 59 minutes. This is used to trigger an update to Storage Plan, after Products are stored on Opportunity. This field is populated via Process Builder and used by the same Process Builder.</description>
    <label>One Minute Delay Ecomm Storage Change</label>
    <type>DateTime</type>
</CustomField>