force-app/main/default/objects/Opportunity/fields/Opportunity_has_referrer__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_has_referrer__c</fullName>
    <description>Used in flow to determine whether there is a referrer.</description>
    <formula>if ( or (
 Not(IsBlank(Referred_by_email_address__c)),
Not(IsBlank( Referring_Contact__c ))), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity has referrer</label>
    <type>Checkbox</type>
</CustomField>