force-app/main/default/objects/Opportunity/fields/Original_Order__c.field-meta.xml
<CustomField>
    <fullName>Original_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to create relationship with original order, for Opportunities used to sell upgrades.</description>
    <label>Original Order</label>
    <referenceTo>fw1__Invoice__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>