force-app/main/default/objects/Opportunity/fields/Original_Owner__c.field-meta.xml
<CustomField>
    <fullName>Original_Owner__c</fullName>
    <label>Original Owner</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ayanna</fullName>
            </value>
            <value>
                <fullName>Bradley</fullName>
            </value>
            <value>
                <fullName>Erica</fullName>
            </value>
            <value>
                <fullName>Gail</fullName>
            </value>
            <value>
                <fullName>Jas</fullName>
            </value>
            <value>
                <fullName>Jerry</fullName>
            </value>
            <value>
                <fullName>John</fullName>
            </value>
            <value>
                <fullName>Kimberly</fullName>
            </value>
            <value>
                <fullName>Lisa</fullName>
            </value>
            <value>
                <fullName>Michael S.</fullName>
            </value>
            <value>
                <fullName>Jennifer</fullName>
            </value>
            <value>
                <fullName>Ali</fullName>
            </value>
            <value>
                <fullName>Leslie</fullName>
            </value>
            <value>
                <fullName>Paula</fullName>
            </value>
            <value>
                <fullName>Shaun</fullName>
            </value>
            <value>
                <fullName>Michael</fullName>
            </value>
            <value>
                <fullName>Steven</fullName>
            </value>
            <value>
                <fullName>Kristina</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>