force-app/main/default/objects/Opportunity/fields/Other_Family_Members_With_Service_Count__c.field-meta.xml
<CustomField>
    <fullName>Other_Family_Members_With_Service_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Holds the number of family members, not including babies, who are getting a service and require a Family Member record. Completed during the Enrollment Flow on Opportunities.</description>
    <inlineHelpText>Enter the number of other family members (not including babies) who are receiving a service and will need a Family Member Record for the lab.</inlineHelpText>
    <label>Other Family Members With Service Count</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>