force-app/main/default/objects/Opportunity/fields/OTP_with_20YPP__c.field-meta.xml
<CustomField>
    <fullName>OTP_with_20YPP__c</fullName>
    <formula>X20YPP__c  +  Sum_of_Product_Price_wo_Storage__c - Sales_Discount__c - 199</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OTP with 20YPP OLD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>