force-app/main/default/objects/Opportunity/fields/Owner_ID__c.field-meta.xml
<CustomField>
    <fullName>Owner_ID__c</fullName>
    <description>Used to assist in updating Owner ID on related Contact and Accounts.</description>
    <formula>Owner.Id</formula>
    <label>Owner ID</label>
    <type>Text</type>
</CustomField>