force-app/main/default/objects/Opportunity/fields/Partial_Product_Totals_Due_at_Checkout__c.field-meta.xml
<CustomField>
    <fullName>Partial_Product_Totals_Due_at_Checkout__c</fullName>
    <description>The total amount in the Partial_Amount_Due_At_Checkout__c field of all products.</description>
    <label>Partial Product Totals Due at Checkout</label>
    <summarizedField>OpportunityLineItem.Partial_Amount_Due_At_Checkout__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Partial_Amount_Due_At_Checkout__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>