force-app/main/default/objects/Opportunity/fields/Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Payment_Amount__c</fullName>
    <description>Used to store amount charged during enrollment (Deposit), which is mapped to Paid Amount on CBO, which is auto subtracted from balance due on Cord Blood Order.</description>
    <label>Payment Amount</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>