force-app/main/default/objects/Opportunity/fields/Payment_Plans__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plans__c</fullName>
    <label>ZDEPRECATE_Payment Plans</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OTP</fullName>
                <label>One-time Payment</label>
            </value>
            <value>
                <fullName>24M</fullName>
                <label>24 Months</label>
            </value>
            <value>
                <fullName>36M</fullName>
                <label>36 Months</label>
            </value>
            <value>
                <fullName>48M</fullName>
                <label>48 Months</label>
            </value>
            <value>
                <fullName>HY18</fullName>
                <label>Hybrid - 18</label>
            </value>
            <value>
                <fullName>12M</fullName>
                <label>12 Months</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>