force-app/main/default/objects/Opportunity/fields/Payment_Plans_ecomm__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plans_ecomm__c</fullName>
    <description>Used for ecomm, to delay the population of Payment Plans until Products are populated.</description>
    <label>Payment Plans (ecomm)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OTP</fullName>
                <label>One-time Payment</label>
            </value>
            <value>
                <fullName>24M</fullName>
                <label>24 Months</label>
            </value>
            <value>
                <fullName>36M</fullName>
                <label>36 Months</label>
            </value>
            <value>
                <fullName>48M</fullName>
                <label>48 Months</label>
            </value>
            <value>
                <fullName>HY18</fullName>
                <label>Hybrid - 18</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>