force-app/main/default/objects/Opportunity/fields/paymentplanawareness__c.field-meta.xml
<CustomField>
    <fullName>paymentplanawareness__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for WTE survey. Data comes from Marketo, syncs to lead and maps to Account and Opportunity.</description>
    <label>Payment plan awareness</label>
    <type>Checkbox</type>
</CustomField>