force-app/main/default/objects/Opportunity/fields/Phone1__c.field-meta.xml
<CustomField>
    <fullName>Phone1__c</fullName>
    <description>Used by Distribution Engine for Lookup Owner Distributor filter, which will not work with phone fields.</description>
    <formula>SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Phone__c, &quot;-&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot;.&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone1</label>
    <type>Text</type>
</CustomField>