force-app/main/default/objects/Opportunity/fields/Phone_Link__c.field-meta.xml
<CustomField>
    <fullName>Phone_Link__c</fullName>
    <description>Hyperlink version of the phone number for use in reports.</description>
    <formula>HYPERLINK(&quot;tel:&quot; &amp; Contact__r.Phone , Contact__r.Phone)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone Link</label>
    <type>Text</type>
</CustomField>