force-app/main/default/objects/Opportunity/fields/planning_to_bank_new__c.field-meta.xml
<CustomField>
    <fullName>planning_to_bank_new__c</fullName>
    <description>Used for WTE survey, data comes from Marketo, syncs to Lead and maps to Account and Opportunity. Replaces previous field, planningtobank.</description>
    <label>Planning to bank</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>not sure</fullName>
            </value>
            <value>
                <fullName>plan to donate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>