force-app/main/default/objects/Opportunity/fields/planningtobank__c.field-meta.xml
<CustomField>
    <fullName>planningtobank__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for WTE survey, data comes from Marketo, syncs to Lead and maps to Account and Opportunity.</description>
    <label>Planning to bank OLD</label>
    <type>Checkbox</type>
</CustomField>