force-app/main/default/objects/Opportunity/fields/Post_enrollment_Follow_up__c.field-meta.xml
<CustomField>
    <fullName>Post_enrollment_Follow_up__c</fullName>
    <label>Post-enrollment Follow-up</label>
    <type>Date</type>
</CustomField>