force-app/main/default/objects/Opportunity/fields/Post_enrollment_Notes__c.field-meta.xml
<CustomField>
    <fullName>Post_enrollment_Notes__c</fullName>
    <label>Post-enrollment Notes</label>
    <type>TextArea</type>
</CustomField>