force-app/main/default/objects/Opportunity/fields/Pre_enrollment_Comments__c.field-meta.xml
<CustomField>
    <fullName>Pre_enrollment_Comments__c</fullName>
    <label>Pre-enrollment Comments</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>