force-app/main/default/objects/Opportunity/fields/Pre_existing_condition__c.field-meta.xml
<CustomField>
    <fullName>Pre_existing_condition__c</fullName>
    <label>Pre-existing condition</label>
    <length>200</length>
    <type>Text</type>
</CustomField>