force-app/main/default/objects/Opportunity/fields/Preferred_comm_method__c.field-meta.xml
<CustomField>
    <fullName>Preferred_comm_method__c</fullName>
    <description>used by WTE API survey, mapped from Lead which is sync&apos;ed with Marketo</description>
    <label>Preferred comm method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>