force-app/main/default/objects/Opportunity/fields/Pregnancy_Week__c.field-meta.xml
<CustomField>
    <fullName>Pregnancy_Week__c</fullName>
    <formula>IF(NOT(ISBLANK(Baby_s_Due_Date__c))&amp;&amp; Baby_s_Due_Date__c &gt; TODAY() , CEILING((TODAY()-(Baby_s_Due_Date__c-274))/7), NULL)</formula>
    <label>Pregnancy Week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>