force-app/main/default/objects/Opportunity/fields/Price_before_Sales_Discount__c.field-meta.xml
<CustomField>
    <fullName>Price_before_Sales_Discount__c</fullName>
    <formula>if(Price_with_Sales_Discount_new__c != 0 ,Price_with_Sales_Discount_new__c + abs(Sales_Discount__c), List_Price_Total__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price (before Sales Discount)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>