force-app/main/default/objects/Opportunity/fields/Price_with_Est_Monthly_Fees__c.field-meta.xml
<CustomField>
    <fullName>Price_with_Est_Monthly_Fees__c</fullName>
    <formula>Price_with_Sales_Discount__c +  Est_Total_Monthly_Fees__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price with Monthly Fees OLD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>