force-app/main/default/objects/Opportunity/fields/Price_with_Sales_Discount__c.field-meta.xml
<CustomField>
    <fullName>Price_with_Sales_Discount__c</fullName>
    <formula>if(Price_with_Sales_Discount_new__c !=0,Price_with_Sales_Discount_new__c,ROUND(Amount,0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price with Sales Discount old</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>