force-app/main/default/objects/Opportunity/fields/Price_with_Sales_Discount_new__c.field-meta.xml
<CustomField>
    <fullName>Price_with_Sales_Discount_new__c</fullName>
    <description>Populated with Process Builder</description>
    <label>Price with Sales Discount</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>