force-app/main/default/objects/Opportunity/fields/Pricing_Calculator_Choices__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Calculator_Choices__c</fullName>
    <label>Pricing Calculator Choices</label>
    <length>100</length>
    <type>Text</type>
</CustomField>