force-app/main/default/objects/Opportunity/fields/Product_Totals_Due_at_Checkout__c.field-meta.xml
<CustomField>
    <fullName>Product_Totals_Due_at_Checkout__c</fullName>
    <description>The total of all products that are marked with &quot;Due at Checkout&quot;</description>
    <label>Product Totals Due at Checkout</label>
    <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Due_at_Checkout__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>