force-app/main/default/objects/Opportunity/fields/Products_or_Services_Ordered_Formatted__c.field-meta.xml
<CustomField>
    <fullName>Products_or_Services_Ordered_Formatted__c</fullName>
    <description>Formatted list of products/services ordered. Populated by flow.</description>
    <inlineHelpText>Formatted list of products/services ordered.</inlineHelpText>
    <label>Products or Services Ordered</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>