force-app/main/default/objects/Opportunity/fields/Promo_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Promo_Campaign__c</fullName>
    <description>This is the promotion campaign assigned to the opportunity.</description>
    <inlineHelpText>This is the promotion campaign assigned to the opportunity.</inlineHelpText>
    <label>Promo Campaign</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>May 2025: 100 Free CB Existing Opps</fullName>
            </value>
            <value>
                <fullName>May 2025: 100 Free CB New Opps</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>