force-app/main/default/objects/Opportunity/fields/Promo_Campaign_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Promo_Campaign_Enabled__c</fullName>
    <description>This field will indicate when the picklist value for promo campaign has been set.</description>
    <formula>IF(PICKLISTCOUNT(Promo_Campaign__c)&gt; 0,TRUE,FALSE)</formula>
    <inlineHelpText>This field will indicate when the picklist value for promo campaign has been set.</inlineHelpText>
    <label>Promo Campaign Enabled</label>
    <type>Checkbox</type>
</CustomField>