force-app/main/default/objects/Opportunity/fields/Promo_Winner__c.field-meta.xml
<CustomField>
    <fullName>Promo_Winner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be used to flag winners of promotions.</description>
    <inlineHelpText>This field will be used to flag winners of promotions.</inlineHelpText>
    <label>Promo Winner</label>
    <type>Checkbox</type>
</CustomField>