force-app/main/default/objects/Opportunity/fields/Promo_Winner_Checked__c.field-meta.xml
<CustomField>
    <fullName>Promo_Winner_Checked__c</fullName>
    <description>Field to determine when the promo winner field was checked.</description>
    <inlineHelpText>Field to determine when the promo winner field was checked.</inlineHelpText>
    <label>Promo Winner Checked</label>
    <type>DateTime</type>
</CustomField>