force-app/main/default/objects/Opportunity/fields/Quality_Company_Recall__c.field-meta.xml
<CustomField>
    <fullName>Quality_Company_Recall__c</fullName>
    <label>Quality - Company Recall</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Select</fullName>
            </value>
            <value>
                <fullName>1_Low</fullName>
                <label>1 - Low</label>
            </value>
            <value>
                <fullName>2_Medium</fullName>
                <label>2 - Medium</label>
            </value>
            <value>
                <fullName>3_High</fullName>
                <label>3 - High</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>